[gd_scene load_steps=11 format=3 uid="uid://7oceykmcwenj"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_10n3l"]
[ext_resource type="Texture2D" uid="uid://b7nt2d4hw6e76" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/button_unpressed.png" id="2_5d4p6"]
[ext_resource type="Texture2D" uid="uid://bwhmicvg33voc" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Dialouge UI/Emotes/frame.png" id="2_bv47s"]
[ext_resource type="Texture2D" uid="uid://k5lnqhevgt72" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/button_pressed.png" id="3_qw72b"]
[ext_resource type="Texture2D" uid="uid://bl8lljwlmrxy4" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/sponsor_button_unpressed.png" id="4_00sgv"]
[ext_resource type="Texture2D" uid="uid://bj1mv0vud87gp" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/sponsor_button_pressed.png" id="5_oo7nc"]
[ext_resource type="Texture2D" uid="uid://dmqgjjteofoqq" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/about_button_unpressed.png" id="6_bkqcb"]
[ext_resource type="Texture2D" uid="uid://coghfm201q71h" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/about_button_pressed.png" id="7_7yfhj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wcpiw"]
texture = ExtResource("2_bv47s")
texture_region_size = Vector2i(8, 8)
1:0/0 = 0
2:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
1:7/0 = 0
2:7/0 = 0
5:7/0 = 0
6:7/0 = 0
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_cgeii"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_wcpiw")

[node name="PauseMenu" type="Control"]
process_priority = -418
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10n3l")

[node name="MenuTiles" type="TileMap" parent="."]
tile_set = SubResource("TileSet_cgeii")
cell_quadrant_size = 8
format = 2
layer_0/tile_data = PackedInt32Array(131065, 65536, 1, 131066, 131072, 1, 196600, 0, 2, 196601, 65536, 2, 131067, 196608, 1, 131068, 262144, 1, 131069, 196608, 1, 131070, 262144, 1, 131071, 196608, 1, 65536, 262144, 1, 65537, 196608, 1, 65538, 262144, 1, 65539, 196608, 1, 65540, 262144, 1, 196602, 131072, 2, 196603, 196608, 2, 196604, 262144, 2, 196605, 196608, 2, 196606, 196608, 2, 196607, 262144, 2, 131072, 196608, 2, 131073, 262144, 2, 131074, 196608, 2, 131075, 196608, 2, 131076, 262144, 2, 262137, 65536, 3, 327673, 65536, 4, 262138, 131072, 3, 327674, 131072, 4, 393209, 65536, 3, 458745, 65536, 4, 393210, 131072, 3, 458746, 131072, 4, 524281, 65536, 3, 589817, 65536, 4, 524282, 131072, 3, 589818, 131072, 4, 655353, 65536, 3, 720889, 65536, 4, 655354, 131072, 3, 720890, 131072, 4, 786425, 65536, 3, 851961, 65536, 4, 786426, 131072, 3, 851962, 131072, 4, 917497, 65536, 3, 983033, 65536, 4, 917498, 131072, 3, 983034, 131072, 4, 1048569, 65536, 3, 1114105, 65536, 5, 1048570, 131072, 3, 1114106, 131072, 5, 1114104, 0, 5, 1179640, 0, 6, 1179641, 65536, 6, 1179642, 131072, 6, 1114107, 196608, 5, 1179643, 196608, 6, 1114108, 262144, 5, 1179644, 262144, 6, 1114109, 196608, 5, 1179645, 196608, 6, 1114110, 262144, 5, 1179646, 262144, 6, 1114111, 196608, 5, 1179647, 196608, 6, 1048576, 262144, 5, 1114112, 262144, 6, 1048577, 196608, 5, 1114113, 196608, 6, 1048578, 262144, 5, 1114114, 262144, 6, 1048579, 196608, 5, 1114115, 196608, 6, 1048580, 196608, 5, 1114116, 196608, 6, 1048581, 327680, 5, 1114117, 327680, 6, 1245177, 65536, 7, 1245178, 131072, 7, 1048582, 393216, 5, 1114118, 393216, 6, 1179654, 393216, 7, 1179653, 327680, 7, 1048583, 458752, 5, 1114119, 458752, 6, 917509, 327680, 3, 983045, 327680, 4, 917510, 393216, 3, 983046, 393216, 4, 786437, 327680, 3, 851973, 327680, 4, 786438, 393216, 3, 851974, 393216, 4, 655365, 327680, 3, 720901, 327680, 4, 655366, 393216, 3, 720902, 393216, 4, 524293, 327680, 3, 589829, 327680, 4, 524294, 393216, 3, 589830, 393216, 4, 458757, 327680, 4, 458758, 393216, 4, 196614, 393216, 3, 131078, 393216, 2, 262150, 393216, 3, 327686, 393216, 4, 65542, 393216, 1, 327685, 327680, 4, 393221, 327680, 3, 262149, 327680, 3, 196613, 327680, 3, 393222, 393216, 3, 131077, 327680, 2, 65541, 327680, 1, 5, 327680, 0, 6, 393216, 0, 65543, 458752, 1, 131079, 458752, 2, 262139, 196608, 3, 327675, 196608, 4, 262140, 262144, 3, 327676, 262144, 4, 196611, 196608, 3, 262147, 196608, 4, 196612, 262144, 3, 262148, 262144, 4, 393211, 196608, 3, 458747, 196608, 4, 393212, 262144, 3, 458748, 262144, 4, 393213, 196608, 3, 458749, 196608, 4, 393214, 262144, 3, 458750, 262144, 4, 393215, 196608, 3, 458751, 196608, 3, 327680, 262144, 3, 393216, 262144, 3, 327681, 196608, 3, 393217, 196608, 3, 327682, 262144, 3, 393218, 262144, 3, 327683, 196608, 3, 393219, 196608, 3, 327684, 262144, 3, 393220, 262144, 3, 196609, 196608, 3, 262145, 196608, 4, 196610, 262144, 3, 262146, 262144, 4, 262143, 196608, 3, 327679, 196608, 4, 196608, 262144, 3, 262144, 262144, 4, 262141, 196608, 3, 327677, 196608, 4, 262142, 262144, 3, 327678, 262144, 4, 524285, 196608, 3, 589821, 196608, 3, 524286, 262144, 3, 589822, 262144, 3, 524283, 196608, 3, 589819, 196608, 3, 524284, 262144, 3, 589820, 262144, 3, 655355, 196608, 4, 655356, 262144, 4, 655357, 196608, 4, 655358, 262144, 4, 720893, 196608, 3, 786429, 196608, 4, 720894, 262144, 3, 786430, 262144, 4, 720891, 196608, 3, 786427, 196608, 4, 720892, 262144, 3, 786428, 262144, 4, 851963, 196608, 3, 917499, 196608, 4, 851964, 262144, 3, 917500, 262144, 4, 983035, 196608, 3, 1048571, 196608, 4, 983036, 262144, 3, 1048572, 262144, 4, 983037, 196608, 3, 1048573, 196608, 4, 983038, 262144, 3, 1048574, 262144, 4, 851965, 196608, 3, 917501, 196608, 4, 851966, 262144, 3, 917502, 262144, 4, 851967, 196608, 3, 917503, 196608, 4, 786432, 262144, 3, 851968, 262144, 4, 983039, 196608, 3, 1048575, 196608, 4, 917504, 262144, 3, 983040, 262144, 4, 917505, 196608, 3, 983041, 196608, 4, 917506, 262144, 3, 983042, 262144, 4, 917507, 196608, 3, 983043, 196608, 4, 917508, 262144, 3, 983044, 262144, 4, 786435, 196608, 3, 851971, 196608, 4, 786436, 262144, 3, 851972, 262144, 4, 786433, 196608, 3, 851969, 196608, 4, 786434, 262144, 3, 851970, 262144, 4, 655363, 196608, 3, 720899, 196608, 4, 655364, 262144, 3, 720900, 262144, 4, 524291, 196608, 3, 589827, 196608, 4, 524292, 262144, 3, 589828, 262144, 4, 524289, 196608, 3, 589825, 196608, 4, 524290, 262144, 3, 589826, 262144, 4, 458753, 196608, 4, 458754, 262144, 4, 589823, 196608, 3, 655359, 196608, 4, 524288, 262144, 3, 589824, 262144, 4, 720895, 196608, 3, 786431, 196608, 4, 655360, 262144, 3, 720896, 262144, 4, 655361, 196608, 3, 720897, 196608, 4, 655362, 262144, 3, 720898, 262144, 4, 458755, 196608, 4, 458756, 262144, 4, 524287, 196608, 4, 458752, 262144, 4, 65529, 65536, 0, 65528, 0, 0, 65530, 131072, 0, 131064, 0, 1)

[node name="PausedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = 26.0
offset_right = 25.0
offset_bottom = 45.0
scale = Vector2(0.75, 0.75)
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -22.5
offset_top = 49.0
offset_right = 67.5
offset_bottom = 76.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_5d4p6")
texture_pressed = ExtResource("3_qw72b")

[node name="ResumeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = 50.0
offset_right = 25.0
offset_bottom = 69.0
scale = Vector2(0.75, 0.75)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
text = "RESUME"

[node name="ControlsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -23.0
offset_top = 69.0
offset_right = 67.0
offset_bottom = 105.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_5d4p6")
texture_pressed = ExtResource("3_qw72b")

[node name="ControlsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -19.87
offset_top = 70.0
offset_right = 33.13
offset_bottom = 89.0
scale = Vector2(0.75, 0.75)
text = "CONTROLS"
horizontal_alignment = 1

[node name="SaveButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -22.5
offset_top = 89.0
offset_right = 67.5
offset_bottom = 116.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_5d4p6")
texture_pressed = ExtResource("3_qw72b")

[node name="SaveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -18.75
offset_top = 90.0
offset_right = 31.25
offset_bottom = 109.0
scale = Vector2(0.75, 0.75)
text = "SAVE"
horizontal_alignment = 1

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -22.5
offset_top = 109.0
offset_right = 67.5
offset_bottom = 136.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_5d4p6")
texture_pressed = ExtResource("3_qw72b")

[node name="ExitLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = 110.0
offset_right = 25.0
offset_bottom = 129.0
scale = Vector2(0.75, 0.75)
text = "EXIT"
horizontal_alignment = 1

[node name="SponsorButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 24.0
offset_right = 42.0
offset_bottom = 48.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("4_00sgv")
texture_pressed = ExtResource("5_oo7nc")

[node name="AboutButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 24.0
offset_right = 53.0
offset_bottom = 48.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("6_bkqcb")
texture_pressed = ExtResource("7_7yfhj")

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="SponsorButton" to="." method="_on_sponsor_button_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_about_button_pressed"]
